--- a/css/animations.css
+++ b/css/animations.css
@@ -141,6 +141,24 @@ body:not(.animations-enabled) *:not(.dark-mode .template-card):not(.theme-transi
   }
 }
 
+@-webkit-keyframes elasticSlideInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+  }
+  70% {
+    opacity: 1;
+    -webkit-transform: translateX(2%);
+  }
+  85% {
+    -webkit-transform: translateX(-1%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+
 @keyframes elasticSlideInLeft {
   0% {
     opacity: 0;
@@ -156,6 +174,24 @@ body:not(.animations-enabled) *:not(.dark-mode .template-card):not(.theme-transi
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes elasticSlideInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+  70% {
+    opacity: 1;
+    -webkit-transform: translateX(-2%);
+  }
+  85% {
+    -webkit-transform: translateX(1%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
   }
 }
 
@@ -344,14 +380,18 @@ input:invalid:not(:placeholder-shown) {
   z-index: 2;
 }
 
-.tab-content.sliding-in-right {
+.tab-content.sliding-in-right,
+.tab-content.ios-tab-transition.sliding-in-right {
+  -webkit-animation: elasticSlideInRight 0.4s cubic-bezier(0.22, 1, 0.36, 1) forwards;
   animation: elasticSlideInRight 0.4s cubic-bezier(0.22, 1, 0.36, 1) forwards;
   display: block !important;
   position: absolute;
   z-index: 3;
 }
 
-.tab-content.sliding-in-left {
+.tab-content.sliding-in-left,
+.tab-content.ios-tab-transition.sliding-in-left {
+  -webkit-animation: elasticSlideInLeft 0.4s cubic-bezier(0.22, 1, 0.36, 1) forwards;
   animation: elasticSlideInLeft 0.4s cubic-bezier(0.22, 1, 0.36, 1) forwards;
   display: block !important;
   position: absolute;
